--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <title>Hello World</title>
 </head>
 
-<body>
+<body style="background-color: rgb(47, 0, 255);">
 <h1>Hello World</h1>
 
 </body>
